--- a/src/components/checkout/Checkout.scss
+++ b/src/components/checkout/Checkout.scss
@@ -1,6 +1,8 @@
 
 .form-container{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 
     form{
@@ -31,6 +33,16 @@
             font-size: 2rem;
             
         }
-        
+    }
+    .modal-purchase{
+        height: 20rem;
+        width: 50rem;
+        font-size: 2rem;
+        border: solid 1px;
+        margin-top: 2rem;
+        padding: 2rem;
+        text-align: center;
+        display: flex;
+        align-items: center;
     }
 }
