--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 *{
   margin:0;
   padding:0;
+  font-family: 'Days One';
 }
 
 html{
@@ -8,7 +9,6 @@ html{
 }
 
 .App {
- 
   text-align: center;
   display: flex;
   flex-direction: column;
