--- a/src/containers/itemListContainer/ItemListContainer.scss
+++ b/src/containers/itemListContainer/ItemListContainer.scss
@@ -1,28 +1,29 @@
-
-.itemListContainer{
+.item-list-container{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
- 
-
-    h1{
-        margin: 5rem 0;
-        width: fit-content;
-        padding: 1rem;
-        border: groove beige;
-        background-color: beige;
-        color: darkslategray;
+    margin: 2rem;
+    
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 100vw;
     }
-
-    .itemList{
-
-        @media only screen and (min-width: 768px) {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-evenly;
-            width: 100vw;
+    
+    .loader{
+        font-size: 2rem;
+        display: flex;
+        flex-direction: column;
+        
+        align-items: center;
+       
+        .loader-img{
+            height: 20rem;
+            width: 30rem;
         }
     }
 }
