--- a/src/components/cartWidget/CartWidget.scss
+++ b/src/components/cartWidget/CartWidget.scss
@@ -2,13 +2,15 @@
 .cart-widget{
     display: flex;
     margin-top: 0.75rem;
+    font-size:4rem;
+    color:white;
 
    span{
-       color: white;
+       color: black;
        height: 2rem;
        width: 2rem;
        border-radius: 50%;
-       background-color: rgb(199, 137, 22);
+       background-color: white;
        text-align: center;  
        padding: 0.25rem 0rem 0rem 0rem;
        font-size: 1.25rem;
