--- a/src/components/itemCount/ItemCount.scss
+++ b/src/components/itemCount/ItemCount.scss
@@ -20,7 +20,8 @@
         button{
             width: 15px;
             height: 15px;
-            font-size: 1rem;
+            font-size: 1.5rem;
+            margin: 0 1rem;
         }
     
         p{
@@ -28,5 +29,9 @@
             margin-top: 1rem;
             font-size: 1rem;
         }
+    }
+
+    .add-btn{
+        font-size: 5rem !important;
     }
 }
