--- a/src/components/itemDetail/ItemDetail.scss
+++ b/src/components/itemDetail/ItemDetail.scss
@@ -1,6 +1,42 @@
-.card-buttons{
-    
-    button{
-       margin:0 0.5rem;
+.item-detail-card{
+    display: flex;
+    width: 80rem;
+    height:45rem;
+    margin-top:10rem;
+    padding:2rem;
+    border: 2px solid red;
+    box-shadow:
+    0 0 50px rgb(255, 0, 76),            
+    -10px 0 80px  rgb(255, 0, 76),        
+    10px 0 80px  rgb(255, 0, 76);  
+    border-radius: 20px;
+    font-size: 1.5rem;
+
+    .detail-img{
+        max-height: 20rem;
+    }
+
+    .detail-body{
+        height: 40rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        margin: 0 1rem 0rem 1rem;
+
+        h5{
+            font-size: 100px;
+        }
+
+        p{
+            align-items: center;
+        }
+
+        .btn{
+            font-size: 1.1rem;
+            margin:0 1rem;
+        }
     }
 }
+
+
