--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,12 +1,13 @@
 
 header{
-    border-bottom: 1px solid #E2E8F0;
+    border-bottom: 1px solid rgb(0, 0, 0);
 
     nav{
         display: flex;
         justify-content: space-between;
         padding: 0 1.5rem;
-        background-color: black;
+        background-color: rgb(15, 2, 2);
+        height: 6rem;
 
         ul{
             display: flex;
@@ -24,7 +25,7 @@ header{
                 border-radius: 10px;
                 text-align: center;
                 transition: 0.3s;
-                box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+                box-shadow: 0 10px 27px rgba(39, 155, 10, 0.596);
 
                 & active {
                     left: 0;
@@ -66,9 +67,8 @@ header{
         }
         
         .brand-logo{
-            width: 70px;
-            height: 40px;
-            
+            width: 105px;
+            height: 60px;
         }
 
         .hamburger{
