--- a/src/containers/itemListContainer/ItemListContainer.scss
+++ b/src/containers/itemListContainer/ItemListContainer.scss
@@ -1,25 +1,29 @@
 .item-list-container{
+    background-image: url(../../assets/background.jpeg);
+    background-repeat: no-repeat;
+    background-size:cover;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 2rem;
     
     @media only screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        align-items: center;
+        align-items:flex-start;
         justify-content: space-evenly;
         width: 100vw;
+        height: 95vh;
     }
     
     .loader{
-        font-size: 2rem;
+        margin-top: 10rem;
+        font-size: 3rem;
         display: flex;
         flex-direction: column;
-        
         align-items: center;
+        color: white;
        
         .loader-img{
             height: 20rem;
