--- a/src/components/itemCount/ItemCount.scss
+++ b/src/components/itemCount/ItemCount.scss
@@ -5,9 +5,9 @@
     align-items: center;
 
     .counter{
-        width: 6rem;
-        height: 3rem;
-       
+        width: 9rem;
+        height: 4.5rem;
+        font-size: 1.5rem;
         padding: 0.25rem;
         margin-bottom: 0.5rem;
         border-radius: 10%;
@@ -18,20 +18,38 @@
        
     
         button{
-            width: 15px;
-            height: 15px;
-            font-size: 1.5rem;
-            margin: 0 1rem;
+           border-radius: 50%;
+           width: 3rem;
+           height: 3rem;
         }
     
         p{
             color: white;
             margin-top: 1rem;
-            font-size: 1rem;
+            font-size: 1.5rem;
         }
     }
 
     .add-btn{
-        font-size: 5rem !important;
+        border-radius: 10px;
+        padding: 1rem;
+        font-size: 1.5rem;
+        color: #fff;
+        background: lighten(red, 3%);  
+        border: 1px solid darken(red, 4%);
+        box-shadow: 0px 2px 0 darken(red, 5%), 2px 4px 6px darken(red, 2%);
+        letter-spacing: 1px;
+        transition: all 150ms linear;
+
+        &:hover {
+            background: darken(red, 1.5%);
+            border: 1px solid rgba(#000, .05);
+            box-shadow: 1px 1px 2px rgba(#fff, .2);
+            color: lighten(red, 18%); 
+            text-decoration: none;
+            text-shadow: -1px -1px 0 darken(red, 9.5%);
+            transition: all 250ms linear;
+        }
     }
+       
 }
