--- a/src/components/itemDetail/ItemDetail.scss
+++ b/src/components/itemDetail/ItemDetail.scss
@@ -1,8 +1,11 @@
 .item-detail-card{
+    background-color: white;
     display: flex;
-    width: 80rem;
-    height:45rem;
-    margin-top:10rem;
+    flex-direction: column;
+    align-items: center;
+    height: 75rem;
+    width:45rem;
+    margin:3rem 1.5rem;
     padding:2rem;
     border: 2px solid red;
     box-shadow:
@@ -10,10 +13,29 @@
     -10px 0 80px  rgb(255, 0, 76),        
     10px 0 80px  rgb(255, 0, 76);  
     border-radius: 20px;
-    font-size: 1.5rem;
+
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        width: 80rem;
+        height:45rem;
+        margin-top:10rem;
+        padding:2rem;
+        border: 2px solid red;
+        box-shadow:
+        0 0 50px rgb(255, 0, 76),            
+        -10px 0 80px  rgb(255, 0, 76),        
+        10px 0 80px  rgb(255, 0, 76);  
+        border-radius: 20px;
+    }
 
     .detail-img{
-        max-height: 20rem;
+        max-width: 20rem;
+        margin-bottom: 5rem;
+      
+        @media only screen and (min-width: 768px) {
+            max-height: 30rem;
+        }
     }
 
     .detail-body{
@@ -21,20 +43,40 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        margin: 0 1rem 0rem 1rem;
+        text-align: center;
+        justify-content: space-evenly;
+        margin: 0 1rem 0rem 3rem;
 
-        h5{
-            font-size: 100px;
+        h2{
+            font-size: 2.5rem;
         }
 
         p{
             align-items: center;
+            font-size: 1.5rem;
         }
 
         .btn{
-            font-size: 1.1rem;
-            margin:0 1rem;
+            margin:1rem 1rem;
+            border-radius: 10px;
+            padding: 1rem;
+            font-size: 1.5rem;
+            color: #fff;
+            background: lighten(red, 3%);  
+            border: 1px solid darken(red, 4%);
+            box-shadow: 0px 2px 0 darken(red, 5%), 2px 4px 6px darken(red, 2%);
+            letter-spacing: 1px;
+            transition: all 150ms linear;
+
+            &:hover {
+                background: darken(red, 1.5%);
+                border: 1px solid rgba(#000, .05);
+                box-shadow: 1px 1px 2px rgba(#fff, .2);
+                color: lighten(red, 18%); 
+                text-decoration: none;
+                text-shadow: -1px -1px 0 darken(red, 9.5%);
+                transition: all 250ms linear;
+            }
         }
     }
 }
