--- a/src/components/cart/Cart.scss
+++ b/src/components/cart/Cart.scss
@@ -1,5 +1,6 @@
 .cart-container{
     background-image: url(../../assets/background4.png);
+    background-size:cover;
     background-attachment: fixed;
     height: 95vh;
     color: white;
@@ -15,8 +16,8 @@
     .cart-summary{
         text-align: center;
         background-color: #ffffff10;
-        backdrop-filter: blur(3px);
-        -webkit-backdrop-filter: blur(3px);
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
         border: 1px solid white;
         padding: 2rem 0;
         
@@ -26,17 +27,61 @@
             
             .col{
                 margin: 0 2rem;
+
+                @media only screen and (max-width: 575px) {
+                    margin-top: 1rem
+                }
             }
 
             p{  
                 font-size: 1.5rem;
             }
+
+            .delete-icon{
+                width: 5rem;
+                height: 5rem;
+                cursor: pointer;
+            }
         }
     }   
 
+    .counter{
+
+        @media only screen and (max-width: 575px) {
+            width: 6rem;
+            height: 3rem;
+            font-size: 1rem;
+            padding: 0.25rem;
+            margin-bottom: 0.5rem;
+            border-radius: 10%;
+            align-items: center;
+            display: flex;
+            justify-content: space-evenly;
+            background-color: dimgray;
+            margin-left: 3.5rem;
+            
+        
+            button{
+            border-radius: 50%;
+            width: 2rem;
+            height: 2rem;
+            }
+        
+            p{
+                color: white;
+                margin-top: 1rem;
+                font-size: 1rem;
+            }
+        }
+    }
+
     .total-price{
-        font-size: 3rem;
+        font-size: 2rem;
         margin-bottom: 1rem;
+
+        @media only screen and (min-width: 575px) {
+            font-size: 3rem;
+        }
     }
 
     .cart-buttons{
@@ -44,8 +89,12 @@
         justify-content: center;
        
         button{
-            font-size: 2rem;
+            font-size: 1rem;
             margin:0 1rem;
+
+            @media only screen and (min-width: 575px) {
+                font-size: 2rem;
+            }
         }
     }
 }
@@ -53,6 +102,7 @@
 .empty-cart{
     background-image: url(../../assets/background3.jpeg);
     background-size:cover;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
