--- a/src/containers/itemDetailContainer/ItemDetailContainer.scss
+++ b/src/containers/itemDetailContainer/ItemDetailContainer.scss
@@ -1,14 +1,17 @@
 .item-detail-container{
     background-image: url(../../assets/background2.jpeg);
     background-size:cover;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     height: 95vh;
 
     .card-loader{
         position: absolute;
+        font-size: 3rem;
+        color: white;
         top:30%;
-        left: 45%;
+        left: 40%;
     }
 }
 
