--- a/src/components/checkout/Checkout.scss
+++ b/src/components/checkout/Checkout.scss
@@ -7,8 +7,7 @@
 
     form{
         margin-top: 3rem;
-        height: 40rem;
-        width: 63rem;
+        
         border: 1px solid;
         display: flex;
         flex-direction: column;
@@ -28,21 +27,58 @@
         }
 
         .submit-btn{
-          
-            margin: 2rem 0 0 2rem;
+            margin: 2rem 0 2rem 2rem;
             font-size: 2rem;
             
         }
     }
     .modal-purchase{
-        height: 20rem;
-        width: 50rem;
+
+        background-image: url(../../assets/background5.png);
+        background-size:cover;
+        background-attachment: fixed;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         font-size: 2rem;
         border: solid 1px;
-        margin-top: 2rem;
         padding: 2rem;
-        text-align: center;
-        display: flex;
-        align-items: center;
+
+        p{
+            text-align: center;
+            color: white;
+            padding: 1rem;
+            background-color: #ffffff10;
+            backdrop-filter: blur(7px);
+            -webkit-backdrop-filter: blur(7px);
+        }
+
+
+
+        button{
+            margin:1rem 1rem;
+            border-radius: 10px;
+            padding: 1rem;
+            font-size: 1.5rem;
+            color: white;
+            background: lighten(rgb(14, 214, 228), 3%);  
+            border: 1px solid darken(rgb(14,214,228), 4%);
+            box-shadow: 0px 2px 0 darken(rgb(14,214,228), 5%), 2px 4px 6px darken(rgb(14,214,228), 2%);
+            letter-spacing: 1px;
+            transition: all 150ms linear;
+
+            &:hover {
+                background: darken(rgb(14,214,228), 1.5%);
+                border: 1px solid rgba(#000, .05);
+                box-shadow: 1px 1px 2px rgba(#fff, .2);
+                color: white;
+                text-decoration: none;
+                text-shadow: -1px -1px 0 darken(rgb(14,214,228), 9.5%);
+                transition: all 250ms linear;
+            }
+        }
     }
 }
