--- a/src/components/itemDetail/ItemDetail.scss
+++ b/src/components/itemDetail/ItemDetail.scss
@@ -48,7 +48,8 @@
         margin: 0 1rem 0rem 3rem;
 
         h2{
-            font-size: 2.5rem;
+            font-weight: 900;
+            text-transform: uppercase;
         }
 
         p{
