--- a/src/containers/itemDetailContainer/ItemDetailContainer.scss
+++ b/src/containers/itemDetailContainer/ItemDetailContainer.scss
@@ -4,7 +4,7 @@
     background-attachment: fixed;
     display: flex;
     justify-content: center;
-    height: 95vh;
+    height: 100vh;
 
     .card-loader{
         position: absolute;
@@ -12,6 +12,23 @@
         color: white;
         top:30%;
         left: 40%;
+
+        @media only screen and (max-width: 575px) {
+            left: 30%;
+        }
+
+        img{
+            margin-bottom: 1rem;
+            height: 15rem;
+            width: 30rem;
+
+            @media only screen and (max-width: 575px) {
+                position: relative;
+                right: 30%;
+
+            }
+
+        }
     }
 }
 
