--- a/src/components/item/Item.scss
+++ b/src/components/item/Item.scss
@@ -13,7 +13,7 @@
     10px 0 80px  rgb(0, 225, 255);
     
     @media only screen and (min-width: 768px){
-        margin-top: 10rem;
+        margin: 4rem 0 0 0;
     }
 
     .item-img{
