--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -2,6 +2,8 @@
 header{
     border-bottom: 1px solid rgb(0, 0, 0);
     margin-bottom: 5rem;
+    position: relative;
+    z-index: 1;
 
     nav{
         display: flex;
