--- a/src/components/cart/Cart.scss
+++ b/src/components/cart/Cart.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     align-items: center;
 
+    @media only screen and (min-width: 768px) {
+        height: 3000px;
+    }
+
     h1{
         margin-top: 5rem;
         text-align: center;
