--- a/src/containers/itemListContainer/ItemListContainer.scss
+++ b/src/containers/itemListContainer/ItemListContainer.scss
@@ -7,12 +7,12 @@
     justify-content: space-evenly;
     align-items: center;
     
-    
     @media only screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         align-items:flex-start;
+        height: 150rem;
     }
     
     .loader{
